--- a/index.css
+++ b/index.css
@@ -48,11 +48,17 @@ ol {
 .game {
   display: flex;
   flex-direction: row;
+  justify-content: space-between;
   max-width: 550px;
   margin: 50px auto 0;
 }
 
+.game-board {
+  width: 300px;
+}
+
 .game-info {
+  width: 230px;
   margin-left: 20px;
 }
 
